# first_project

./: .gitignore  config.yaml  pyproject.toml
data/clean/: clean_apps.csv
notebooks/: eda_zhiwen.ipynb  first_project_Bibian.ipynb  first_project_Bibian_dirty.ipynb  first_project_final_complete_B.ipynb  functions.py  load_and_clean_data_zhiwen.ipynb
sql_scripts/google_play_store/: dbt_project.yml
sql_scripts/google_play_store/analyses/: top_installed_apps.sql
sql_scripts/google_play_store/models/marts/: mart_apps_summary.sql
sql_scripts/google_play_store/models/staging/: source.yml  stg_apps.sql  stg_reviews.sql
