[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "google-cloud-bigquery>=3.41.0",
    "pandas-gbq>=0.34.1",
    "google-cloud-bigquery-storage>=2.38.0",
    "pyarrow>=21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
